--- a/TVMaxPolla/TVMaxPolla/platforms/android/res/xml/config.xml
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/res/xml/config.xml
@@ -76,4 +76,10 @@
     <feature name="Notification">
         <param name="android-package" value="org.apache.cordova.dialogs.Notification" />
     </feature>
+    <feature name="SpinnerDialog">
+        <param name="android-package" value="hu.dpal.phonegap.plugins.SpinnerDialog" />
+    </feature>
+    <feature name="PushPlugin">
+        <param name="android-package" value="com.plugin.gcm.PushPlugin" />
+    </feature>
 </widget>
