--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -103,6 +103,7 @@
 		text-transform: uppercase;
 		display: none;
 		
+		
 	}
 			
 	header .glyphicon { color: #3E79C4;}
@@ -332,7 +333,7 @@
 	body.content-calendario #wrapper2 { 
 		position: absolute;
 		z-index: 1; 
-		top: 92px; 
+		top: 120px; 
 		bottom: 0; 
 		left: 0; 
 		width: 100%; 
@@ -369,6 +370,8 @@
 		color:#ffffff;
 		text-align: center;
 		text-transform: uppercase;
+		font-weight: bold;
+		margin-left:5px;		
 	}
 	
 	
@@ -409,10 +412,9 @@
 		top:50px; 
 		left:0; 		
 		width: 100%; 
-		height: 45px;
-		line-height:45px; 
+		height: 70px;
+		line-height:70px; 
 		z-index: 2; 
-		font-size: 1.6em; 
 		background: #E6E6E6; 
 		color:#4D4D4D;
 		border-bottom: solid #FFD455;
@@ -421,13 +423,7 @@
 	body.content-calendario .calendario-menu.container .active {
 		color:#3E79C4;
 	}
-	
-	body.content-calendario .calendario-menu.container .calendar {
-		text-align: center; 
-		line-height:40px; 
-		padding:5px;
-		font-size: 1.6em; 
-	}
+
 	
 	body.content-calendario .name-month {
 		text-align: center;
