--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -2,10 +2,15 @@
 	* { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 	html { -ms-touch-action: none; }			
 	body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%;}
-	@font-face
+	/*@font-face
 	{
 		font-family: "tvmaxFont";
 		src: url('../fonts/tvmax.ttf') url('../fonts/tvmax_bold.ttf') url('../fonts/tvmax_italic.ttf') url('../fonts/tvmax_bold_italic.ttf'); 
+	}*/
+	@font-face
+	{
+		font-family: "tvmaxFont";
+		src: url('../fonts/tvmax.ttf'); 
 	}
 	body { font-family:tvmaxFont; overflow: hidden; /* this is important to prevent the whole page to bounce */}
 	
