TVMax: mejoras graficas y Certificados de la aplicacion subidos

--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -387,6 +387,14 @@
 		font-weight: bold;
 		margin-left:5px;		
 	}
+	.caption-icon-tablets {
+		font-size:1.5em;
+		color:#ffffff;
+		text-align: center;
+		text-transform: uppercase;
+		font-weight: bold;
+		margin-left:2px;
+	}
 	
 	
 
