--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/css/main.css
@@ -59,10 +59,7 @@
 	.content-menu {border-bottom: solid 1pt #E0E0E0; }
 	.content-menu:last-child {border:0;}
 	
-	
-	/*.content-menu:nth-child(even) {background:#FFFFFF;}
-	.content-menu:nth-child(odd) {background:#FFFFFF;}
-	.content-menu:last-child {border-bottom: solid #FFD455; }*/
+
 
 
 	#wrapper, #wrapper2, #wrapperM, #wrapperMaM, #wrapperMaM2 { 
@@ -159,19 +156,7 @@
 	}
 
 
-	/*figcaption div:first-child {
-		overflow:hidden; 
-		display: -webkit-box; 
-		-webkit-line-clamp: 2; 
-		-webkit-box-orient: vertical;	
-	}
-	 
-	body.content-home figcaption div:last-child {
-		overflow:hidden; 
-		display: -webkit-box; 
-		-webkit-line-clamp: 2; 
-		-webkit-box-orient: vertical;	
-	}*/
+	
 	 
 	
 	/*noticias*/
@@ -306,9 +291,7 @@
 	
 	
 	
-	
-	/*goles*/
-	/*body.content-goles |class|element|id| {|property|}*/
+
 	
 	 
 	/*polemicas*/
@@ -336,43 +319,32 @@
 	
 		
 	/*Goles*/
-	body.content-goles #wrapper,
-	body.content-goles #wrapper2 { 
-		position: absolute;
-		z-index: 1; 
-		top: 120px; 
-		bottom: 0; 
-		left: 0; 
-		width: 100%; 
-		background: #fff;
-		
-	}
-		
-	body.content-goles .goles-menu.container {
-		position: absolute; 
-		top:50px; 
-		left:0; 		
-		width: 100%; 
-		height: 70px;
-		line-height:70px; 
-		z-index: 2; 
-		background: #E6E6E6; 
-		color:#4D4D4D;
-		border-bottom: solid #FFD455;
-	}
 	
-	body.content-goles .goles-menu.container .active {
-		color:#3E79C4;
+	body.content-goles #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
+	body.content-goles #wrapper .scroller .container .row { padding: 0 !important; margin: 0 !important; }
+	body.content-goles #wrapper .scroller .container .row div { padding: 0 !important; margin: 0 !important;  }
+	
+	body.content-goles #wrapper .scroller .container figure {position:relative;  width: 100%; height: auto; padding: 0; margin: 0; }|
+	body.content-goles #wrapper .scroller .container figure img { width: 100%;  height: auto;}			
+	body.content-goles #wrapper .scroller .container figcaption {
+		font-size : 1em;			
+		padding: 5px; 
+		width:100%;
+		line-height:20px;
+		color:#3E79C4; 
+		text-align: left;	   
+	    background-color:#FFFFFF;
+	    bottom: 0;	    
+	    border-bottom: solid #FFD455;
+	    
 	}
+
 	/*goles*/	
 		
 		
 		
 		
 	/*mam*/
-	
-	/*body.content-mam #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
-	body.content-mam #wrapperMaM2 .scroller .container  { padding:  2px !important; margin: 0 !important;}*/
 
 	body.content-mam figure {text-align: center; margin: 0 auto; padding: 5px;}
 	body.content-mam figure img {width: 67px; height: 45px;}
@@ -568,8 +540,7 @@
 		max-height: 150px;	
 	} 
 	
-	
-	body.content-goles .row div.video span:last-child,
+		
 	body.content-history .row div.history span:last-child,
 	body.content-players .row div.player span:last-child,
 	body.content-teams .row div.teams span:last-child {
@@ -664,19 +635,41 @@
 	
 	
 	
-	body.content-goles .row div[data-country],
-	body.content-goles .row div[data-phase] {
-		height: 50px;
-		line-height: 50px;
-		font-size: 1.4em;
-		color:#4D4D4D;  
-		background:#FFFFFF;
-		border-bottom: solid 1pt #E0E0E0; 
-	}
 	
-	body.content-goles .row div[data-country]:last-child,
-	body.content-goles .row div[data-phase]:last-child  {
-		border:0;
-	}
+	
+	body.content-clasificacion #wrapper .scroller .container  { padding:  2px !important; margin: 0 !important;}
+	body.content-clasificacion  #wrapper .scroller .container .row div {background: #ffffff !important;}
+	body.content-clasificacion table tbody tr td {border-bottom: solid 1pt #E0E0E0 !important;}
+
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 	
 	
